# openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: APIS
   version: 1.0.0
-paths:
+paths:    
   /user/login:
     post:
       summary: User Login
@@ -96,6 +96,8 @@ paths:
           required: true
           schema:
             type: string
+      security:
+        - bearerAuth: []
       requestBody:
         content:
           application/json:
@@ -131,29 +133,29 @@ paths:
       summary: Create address
       description: Create address by request body
       tags:
-        - Address
+      - Address 
       requestBody:
         content:
           application/json:
-            schema:
+            schema: 
               type: object
               properties:
                 userId:
                   type: string
                 unit:
-                  type: number
+                  type: number 
                 streetNum:
                   type: number
-                streetName:
+                streetName: 
                   type: string
                 suburb:
                   type: string
                 postcode:
                   type: number
               required:
-                - streetNum
-                - streetName
-                - suburb
+                    - streetNum
+                    - streetName
+                    - suburb
       responses:
         "201":
           description: Address Created
@@ -161,7 +163,7 @@ paths:
           description: Bad address request
   /address/{id}:
     get:
-      summary: Get addresses
+      summary: Get addresses 
       description: Get addresses by user id
       tags:
         - Address
@@ -198,7 +200,7 @@ paths:
         "200":
           description: Toppings are found
         "404":
-          description: Toppings no found
+          description: Toppings no found        
   /order:
     post:
       summary: Create order
@@ -212,8 +214,6 @@ paths:
               type: object
               properties:
                 orderTime:
-                  type: string
-                DeliverPickupTime:
                   type: string
                 orderItems:
                   type: array
@@ -253,7 +253,6 @@ paths:
           description: An order response
         "404":
           description: Order no found
-
   /order/{id}:
     get:
       summary: Get order
@@ -309,8 +308,6 @@ paths:
               properties:
                 orderTime:
                   type: string
-                DeliverPickupTime:
-                  type: string
                 orderItems:
                   type: array
                   items:
@@ -339,37 +336,49 @@ paths:
           description: Order updated
         "404":
           description: Order no found
-  /order/{page}/{pageSize}:
+  /user/order/{id}:
     get:
-      summary: Fetch a subset of orders by page number.
-      description: >
-        List a subset of orders to realise pagination.
+      summary: Get list of users.
+      description: Get list of users by page and page size.
       tags:
-        - Order
+        - User
       parameters:
-        - $ref: "#/components/parameters/page"
-        - $ref: "#/components/parameters/pageSize"
+        - $ref: "#/components/parameters/id"
+      security:
+        - bearerAuth: []
       responses:
         "200":
-          description: Order responses.
+          description: A user response
         "400":
-          description: Bad request.
+          description: Bad request
         "404":
-          description: Orders not found.
-
+          description: Users not found 
 components:
+  securitySchemes:
+    bearerAuth:            # arbitrary name for the security scheme
+      type: http
+      scheme: bearer
+      bearerFormat: JWT    # optional, arbitrary value for documentation purposes
   parameters:
     page:
       in: path
       name: page
-      description: page index, cannot be zero.
+      description: Page index of users, which starts with 1
       required: true
-      schema:
+      schema: 
         type: number
-    pageSize:
+    pageSize: 
       in: path
       name: pageSize
-      description: page item number
-      required: true
-      schema:
+      description: Number of users per page, which should greater than 0
+      schema: 
         type: number
+      required: true
+    id:
+      in: path
+      name: id
+      description: id of user, must be unique
+      schema:
+        type: string
+      required: true
+
